# agent-harness-eval

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  eval.docker.smoke.yaml  eval.yaml.example  pyproject.toml
.github/workflows/: ci.yml
docker/base/: Dockerfile  build_docker_image.sh
docker/claude-code/: Dockerfile  build_docker_image.sh
docker/codex/: Dockerfile  build_docker_image.sh
docker/hermes/: Dockerfile  build_docker_image.sh
docker/nanobot/: Dockerfile  build_docker_image.sh  patch_usage.py
docker/openclaw/: Dockerfile  build_docker_image.sh
docker/zeroclaw/: Dockerfile  build_docker_image.sh
docs/: adding-a-harness.md  adding-a-task.md  adding-an-executor.md
src/agent_harness_eval/: cli.py  constants.py  metrics.py  preflight.py  runner.py  task.py  types.py
src/agent_harness_eval/adapters/: __init__.py  claude_code.py  codex.py  hermes.py  interface.py  nanobot.py  openclaw.py  zeroclaw.py
src/agent_harness_eval/config/: __init__.py  eval_file.py  providers.py  runtime.py
src/agent_harness_eval/executor/: __init__.py  docker.py  host.py
src/agent_harness_eval/graders/: __init__.py  interface.py  judge_client.py  judge_json.py  outcome.py  rubric_judge.py  specs.py  test_suite.py  trajectory.py
src/agent_harness_eval/reports/: __init__.py  case_review.py  category_breakdown.py  failure_taxonomy.py  formatting.py  generate.py  judge_analysis.py  summary.py
src/agent_harness_eval/utils/: conversation.py  cost.py  failure_origin.py  subprocess.py  timestamps.py  workspace.py
tasks/coding/01-refactor-with-tests/: task.yaml
tasks/coding/02-flask-blueprint-empty-name/: task.yaml
tasks/implementation/01-api-rename-across-codebase/: task.yaml
tasks/implementation/02-incident-postmortem/: task.yaml
tests/adapters/: _regression_helpers.py  conftest.py  test_claude_code_adapter.py  test_codex_adapter.py  test_hermes_adapter.py  test_interface.py  test_nanobot_adapter.py  test_openclaw_adapter.py  test_zeroclaw_adapter.py
tests/config/: test_cli.py  test_eval_config.py  test_model_cost_and_conversation.py  test_provider_override.py  test_task_loader.py
tests/graders/: test_grader_dispatch.py  test_judge_client.py  test_judge_json.py  test_outcome_graders.py  test_rubric_judge.py  test_test_suite.py  test_trajectory_graders.py
tests/reports/: test_generate_reports.py  test_metrics.py  test_report_modules.py  test_utils_and_reports.py
tests/runtime/: test_docker_runtime_paths.py  test_executor_policy_env.py  test_host_executor.py  test_preflight.py  test_runner.py  test_runner_install_commands.py  test_subprocess_utils.py  test_workspace_layout.py
tests/utils/: test_failure_origin.py  test_timestamps.py
(+61 files in other folders)
